fixed company detail top job post heigh on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -1102,36 +1102,44 @@ figure {
     background: #ff6602;
     color: #ffffff; }
 .company-detail-job-postings.top-postings .company-detail-job-entry span {
-  display: block;
-  padding: 1rem;
   font-size: 0.875em;
-  line-height: 1.3;
-  box-shadow: rgba(15, 25, 36, 0.1) 5px 5px 0 0; }
+  line-height: 1.3; }
   .company-detail-job-postings.top-postings .company-detail-job-entry span:first-of-type {
-    background: #ffffff;
     color: #0f1924;
     text-align: left; }
   .company-detail-job-postings.top-postings .company-detail-job-entry span:last-of-type {
     -webkit-transition: background 0.3s, color 0.3s;
     -moz-transition: background 0.3s, color 0.3s;
     transition: background 0.3s, color 0.3s;
-    width: 100%;
     text-align: center;
-    background: #f8f8f8;
     color: #ff6602;
-    letter-spacing: 0.025em;
-    border-top: 1px solid #e9eaeb; }
+    letter-spacing: 0.025em; }
 @media screen and (max-width: 980px) {
   .company-detail-job-postings.top-postings .company-detail-job-entry {
     max-width: 26rem;
-    margin: 0 auto 1.5rem; } }
+    margin: 0 auto 1rem;
+    padding: 0.5rem;
+    background: #ffffff;
+    text-align: left;
+    box-shadow: rgba(15, 25, 36, 0.05) 0 0 15px 0; }
+    .company-detail-job-postings.top-postings .company-detail-job-entry span:last-of-type {
+      white-space: nowrap; } }
 @media screen and (min-width: 980px) {
   .company-detail-job-postings.top-postings .company-detail-job-entry {
     display: inline-block;
     vertical-align: bottom;
-    width: calc(100% / 5 ); }
-    .company-detail-job-postings.top-postings .company-detail-job-entry span:first-of-type {
-      font-size: 0.825em; }
+    width: calc(100% / 5 );
+    background: transparent; }
+    .company-detail-job-postings.top-postings .company-detail-job-entry span {
+      box-shadow: rgba(15, 25, 36, 0.1) 5px 5px 0 0;
+      display: block;
+      padding: 1rem; }
+      .company-detail-job-postings.top-postings .company-detail-job-entry span:first-of-type {
+        background: #ffffff;
+        font-size: 0.825em; }
+      .company-detail-job-postings.top-postings .company-detail-job-entry span:last-of-type {
+        background: #f8f8f8;
+        border-top: 1px solid #e9eaeb; }
     .company-detail-job-postings.top-postings .company-detail-job-entry .job-link {
       padding: 0.5rem; } }
 
